--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
     	$('#block3 video')[0].play();
     });
   </script>
-</link></meta><link href="https://YOUR_USERNAME.github.io/mbc-interactive/combined.css" rel="stylesheet"/>
+</link></meta><link href="https://lightwater2.github.io/mbc-interactive/combined.css" rel="stylesheet"/>
 </head>
 <body>
 <!-- Intro -->
@@ -1442,6 +1442,6 @@
 <script src="https://www.amcharts.com/lib/4/themes/dark.js"></script>
 <script src="https://www.amcharts.com/lib/4/themes/animated.js"></script>
 
-<script src="https://YOUR_USERNAME.github.io/mbc-interactive/combined.js"></script>
+<script src="https://lightwater2.github.io/mbc-interactive/combined.js"></script>
 </body>
 </html>
