Add external CDN libraries (jQuery, D3, amCharts)

--- a/imweb-content.html
+++ b/imweb-content.html
@@ -1,6 +1,19 @@
 <!-- MBC Interactive Page for Imweb -->
-<!-- CSS/JS are loaded from external hosting -->
+<!-- External Libraries -->
+<link href="//code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css" rel="stylesheet">
+<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet"/>
+<link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@100;300;400;500;700;900&display=swap" rel="stylesheet"/>
+<link href="https://code.getmdl.io/1.3.0/material.indigo-pink.min.css" rel="stylesheet"/>
+
+<!-- Custom CSS -->
 <link href="https://lightwater2.github.io/mbc-interactive/combined.css" rel="stylesheet"/>
+
+<!-- jQuery & Libraries (must load before content) -->
+<script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
+<script src="https://code.jquery.com/ui/1.12.1/jquery-ui.min.js"></script>
+<script src="https://d3js.org/d3.v4.min.js"></script>
+<script src="https://cdn.jsdelivr.net/gh/holtzy/D3-graph-gallery@master/LIB/sankey.js"></script>
+<script defer src="https://code.getmdl.io/1.3.0/material.min.js"></script>
 
 
 <!-- Intro -->
@@ -1381,4 +1394,11 @@
 <script src="https://lightwater2.github.io/mbc-interactive/combined.js"></script>
 
 
+<!-- amCharts -->
+<script src="https://www.amcharts.com/lib/4/core.js"></script>
+<script src="https://www.amcharts.com/lib/4/charts.js"></script>
+<script src="https://www.amcharts.com/lib/4/themes/dark.js"></script>
+<script src="https://www.amcharts.com/lib/4/themes/animated.js"></script>
+
+<!-- Custom JS -->
 <script src="https://lightwater2.github.io/mbc-interactive/combined.js"></script>
